// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current user reducers change password 1`] = `
{
  "_internal": {
    "loading": {
      "currentUser": true,
      "settings": {},
    },
  },
  "settings": [],
}
`;

exports[`current user reducers change password 2`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
    },
  },
  "email": "alex@gorgias.io",
  "id": 1,
  "name": "Alex",
}
`;

exports[`current user reducers change password 3`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {},
    },
  },
  "settings": [],
}
`;

exports[`current user reducers should handle SET_IS_AVAILABLE 1`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {},
    },
  },
  "settings": [
    {
      "data": {
        "available": true,
      },
      "type": "preferences",
    },
  ],
}
`;

exports[`current user reducers should handle SET_IS_AVAILABLE 2`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {},
    },
  },
  "settings": [
    {
      "data": {
        "available": false,
      },
      "type": "preferences",
    },
  ],
}
`;

exports[`current user reducers submit current user 1`] = `
{
  "_internal": {
    "loading": {
      "currentUser": true,
      "settings": {},
    },
  },
  "settings": [],
}
`;

exports[`current user reducers submit current user 2`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
    },
  },
  "email": "alex@gorgias.io",
  "id": 1,
  "name": "Alex",
}
`;

exports[`current user reducers submit current user 3`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {},
    },
  },
  "settings": [],
}
`;

exports[`current user reducers submit setting 1`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {
        "view": true,
      },
    },
  },
  "settings": [],
}
`;

exports[`current user reducers submit setting 2`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {
        "view": false,
      },
    },
  },
  "settings": [
    {
      "data": {
        "value": 1,
      },
    },
  ],
}
`;

exports[`current user reducers submit setting 3`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {
        "view": false,
      },
    },
  },
  "settings": [
    {
      "data": {
        "value": 1,
      },
      "id": 1,
    },
  ],
}
`;

exports[`current user reducers submit setting 4`] = `
{
  "_internal": {
    "loading": {
      "currentUser": false,
      "settings": {
        "view": false,
      },
    },
  },
  "settings": [],
}
`;
